--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "clap-i18n-richformatter"
 version = "0.1.0"
 edition = "2024"
 license = "MIT"
+description = "Clap rich formatter with i18n support"
 
 [dependencies]
 i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"]}
